<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nextN"
            android:title="@string/next"
            android:icon="@drawable/ic_next"/>
        <item
            android:id="@+id/prevN"
            android:title="@string/previous"
            android:icon="@drawable/ic_previous"/>
        <item
            android:id="@+id/subN"
            android:title="@string/submit"
            android:icon="@drawable/ic_submit" />
    </group>
    <item android:title="More...">
        <menu>
            <item
                android:id="@+id/action_exitN"
                android:icon="@drawable/ic_logout"
                android:title="@string/sign_out"
                />
        </menu>
    </item>
</menu>