<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_home1"
            android:icon="@drawable/ic_home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/action_start1"
            android:icon="@drawable/ic_start_cbt"
            android:title="@string/start_cbt" />
        <item
            android:id="@+id/action_view_cbt1"
            android:icon="@drawable/ic_mycbt"
            android:title="@string/view_cbt"
             />
    </group>


    <item android:title="More...">
        <menu>
            <item
            android:id="@+id/action_exit1"
            android:icon="@drawable/ic_logout"
            android:title="@string/sign_out" />
        </menu>
    </item>
</menu>