<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/next"
        android:orderInCategory="100"
        android:title="@string/next"
        android:icon="@drawable/ic_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/prev"
        android:orderInCategory="200"
        android:title="@string/previous"
        android:icon="@drawable/ic_previous"
        app:showAsAction="never" />
    <item
        android:id="@+id/sub"
        android:orderInCategory="300"
        android:title="@string/submit"
        android:icon="@drawable/ic_submit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="400"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom" />
</menu>
