<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_start"
        android:orderInCategory="200"
        android:title="@string/start_cbt"
        android:icon="@drawable/ic_start_cbt"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_cbt"
        android:orderInCategory="300"
        android:title="@string/view_cbt"
        android:icon="@drawable/ic_mycbt"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="400"
        android:title="@string/sign_out"
        android:icon="@drawable/ic_logout"
        app:showAsAction="ifRoom"/>
</menu>
