<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mobilecbtexam.MainActivity"
    android:background="@drawable/back_twonew">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:text="@string/company"
        android:textSize="40sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/coloryellow"
        android:typeface="sans"
        android:layout_marginTop="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_s_cbt"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/coloryellow"
        android:typeface="sans"
        android:layout_below="@+id/list"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:layout_marginTop="52dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:typeface="sans"
        android:id="@+id/textView2"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/list"
        android:layout_alignEnd="@+id/list"
        android:textColor="@color/coloryellow" />
</RelativeLayout>
