<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:scrollbarThumbVertical="@drawable/vertical_scrollview_thumb"
    android:scrollbarTrackVertical="@drawable/vertical_scrollview_track"
    tools:context="com.example.mobilecbtexam.CbtResult"
    android:background="@drawable/back_twosmall">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dp"
        android:paddingTop="60dp"
        tools:context="com.example.mobilecbtexam.LoginScreen"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_h"
            android:id="@+id/textView"
            android:textSize="25sp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:textColor="@color/coloryellow"
            android:typeface="sans" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:textStyle="bold"
            android:textSize="25sp"
            android:maxLines="1"
            android:lines="1"
            android:drawableLeft="@drawable/ic_edit"
            android:drawablePadding="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="20dp"
            android:maxLength="20"
            android:textColor="@color/coloryellow"
            android:hint="@string/hint_username"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:textStyle="bold"
            android:textSize="25sp"
            android:maxLines="1"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginTop="25dp"
            android:maxLength="20"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_edit"
            android:drawablePadding="8dp"
            android:textColor="@color/coloryellow"
            android:hint="@string/hint_password"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_login"
            android:id="@+id/btnSave"
            android:padding="10dp"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/coloryellow" />
    </LinearLayout>
</ScrollView>