<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:fillViewport="true"
    android:scrollbarThumbVertical="@drawable/vertical_scrollview_thumb"
    android:scrollbarTrackVertical="@drawable/vertical_scrollview_track"
    tools:context="com.example.mobilecbtexam.HomeScreen"
    android:background="@drawable/back_twosmall">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mobilecbtexam.HomeScreen"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_new"
        android:typeface="sans"
        android:id="@+id/txtNew"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/coloryellow"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textAlignment="center"
        android:drawableRight="@drawable/ic_newuser"
        android:drawableLeft="@drawable/ic_newuser"
        android:drawablePadding="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_view"
        android:typeface="sans"
        android:id="@+id/txtAccount"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/coloryellow"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:textAlignment="center"
        android:drawableRight="@drawable/ic_alluser"
        android:drawableLeft="@drawable/ic_alluser"
        android:drawablePadding="2dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_login"
        android:typeface="sans"
        android:id="@+id/txtLogin"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/coloryellow"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:textAlignment="center"
        android:drawableRight="@drawable/ic_login"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/ic_login"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_exit"
        android:typeface="sans"
        android:id="@+id/txtExit"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/colorblack"
        android:background="@color/coloryellow"
        android:padding="10dp"
        android:textAlignment="center"
        android:drawableRight="@drawable/ic_logout"
        android:drawablePadding="8dp"
        android:drawableLeft="@drawable/ic_logout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</LinearLayout>
</ScrollView>