<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"
    android:scrollbarThumbVertical="@drawable/vertical_scrollview_thumb"
    android:scrollbarTrackVertical="@drawable/vertical_scrollview_track"
    tools:context="com.example.mobilecbtexam.CbtResult"
    android:background="@drawable/back_twosmall">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scroll"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.mobilecbtexam.CreateAccount"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/profile_pic"
            android:src="@mipmap/ic_passport"
            android:contentDescription="ProfilePics"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorPrimaryDark"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/browse"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="bottom|end"
            android:src="@android:drawable/ic_menu_edit"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:background="@color/coloryellow"

            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fullname"
        android:textSize="20sp"
        android:maxLines="1"
        android:textStyle="bold"
        android:textColor="@color/coloryellow"
        android:lines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:maxLength="30"
        android:drawableLeft="@drawable/ic_edit"
        android:drawablePadding="8dp"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_fullname"
        />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:textStyle="bold"
        android:textSize="20sp"
        android:maxLines="1"
        android:lines="1"
        android:drawableLeft="@drawable/ic_edit"
        android:drawablePadding="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/coloryellow"
        android:maxLength="20"
        android:hint="@string/hint_username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:textStyle="bold"
            android:textSize="20sp"
            android:maxLines="1"
            android:lines="1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="20dp"
            android:maxLength="10"
            android:textColor="@color/coloryellow"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_edit"
            android:drawablePadding="8dp"
            android:hint="@string/hint_password"
            />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_record"
        android:id="@+id/btnSave"
        android:textStyle="bold"
        android:textSize="20sp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/coloryellow"/>
</LinearLayout>
</ScrollView>