<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="5dp"
    android:paddingLeft="5dp"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"

    android:scrollbarThumbVertical="@drawable/vertical_scrollview_thumb"
    android:scrollbarTrackVertical="@drawable/vertical_scrollview_track"
    tools:context="com.example.mobilecbtexam.CbtWindow"
    tools:showIn="@layout/activity_cbt_window">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textStyle="bold"
                android:id="@+id/timeLeft"
                android:textSize="20sp"
                android:padding="15sp"
                android:textColor="@color/coloryellow"
                android:background="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textStyle="bold"
                android:id="@+id/noLeft"
                android:textSize="20sp"
                android:padding="15sp"
                android:textColor="@color/coloryellow"
                android:background="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:id="@+id/btnPrevious"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/btnSubmit"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/btnNext"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="bold"
                />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textStyle="bold"
            android:id="@+id/txtQuestion"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/coloryellow"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="20dp"/>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:id="@+id/option_1"
                android:textStyle="bold"
                android:gravity="start"
                android:textAlignment="textStart"
                android:padding="5sp"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:id="@+id/option_2"
                android:textStyle="bold"
                android:gravity="start"
                android:textAlignment="textStart"
                android:padding="5sp"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:id="@+id/option_3"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="start"
                android:textAlignment="textStart"
                android:padding="5sp"
                android:layout_marginBottom="20dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:id="@+id/option_4"
                android:textStyle="bold"
                android:gravity="start"
                android:textAlignment="textStart"
                android:padding="5sp"
                android:textSize="20sp"
                android:layout_marginBottom="20dp" />
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous"
                android:id="@+id/btnPreviousD"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/btnSubmitD"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textStyle="bold"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/btnNextD"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:textStyle="bold"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textStyle="bold"
                android:id="@+id/timeLeftd"
                android:textSize="20sp"
                android:padding="15sp"
                android:textColor="@color/coloryellow"
                android:background="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textStyle="bold"
                android:id="@+id/noLeftd"
                android:textSize="20sp"
                android:padding="15sp"
                android:textColor="@color/coloryellow"
                android:background="@color/colorPrimaryDark"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
